[package]
name = "llq"
version = "0.1.1"
authors = ["Micah Johnston <micah@glowcoil.com>"]
edition = "2021"
description = "Wait-free SPSC linked-list queue with individually reusable nodes"
repository = "https://github.com/glowcoil/llq"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
